--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "duel": "^3.2.0",
+    "ffa": "^3.2.2",
+    "groupstage": "^3.1.1",
     "rxjs": "^5.5.6",
+    "tiebreaker": "^3.1.0",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
